--- a/src/pages/Home/components/Days/Days.module.scss
+++ b/src/pages/Home/components/Days/Days.module.scss
@@ -3,6 +3,7 @@
 .days {
     display: flex;
     justify-content: space-between;
+    background-color: var(#{--components-background-default});
     padding: 20px;
     box-shadow: $box-shadow;
 
@@ -14,11 +15,11 @@
         width: 100%;
         padding: 15px;
         border-radius: $border-radius;
-        background: $bg-card;
+        background-color: var(#{--card-background-default});
         cursor: pointer;
         transition: all 0.2s ease;
         &:hover {
-            box-shadow: $box-shadow;
+            box-shadow: var(#{--card-shadow-default});
             transform: scale(1.1);
         }
 
@@ -30,6 +31,10 @@
                 height: 40px;
             }
         }
+
+        .info_day {
+            color: var(#{--text-color-default})
+        }
         
         .info__day, .indicators__temp_night {
             margin-bottom: 7px;
@@ -37,20 +42,20 @@
 
         .info__day, .indicators__temp_day {
             font-size: 18px;
-            color: $base-color;
+            color: var(#{--text-color-default});
             font-weight: 500;
         }
 
         .info__date {
             font-size: 14px;
-            color: $light-color;
+            color: $base-color;
             font-weight: 400;
         }
 
         .indicators__weather, .indicators__temp_night {
             font-size: 13px;
             font-weight: 400;
-            color: $light-color;
+            color: $base-color;
         }
 
 
