--- a/src/shared/PopUp/PopUp.module.scss
+++ b/src/shared/PopUp/PopUp.module.scss
@@ -11,10 +11,9 @@
     padding: 40px;
     max-width: 750px;
     width: 100%;
-    background: $lite-background;
-    box-shadow: $box-shadow;
+    background: var(#{--components-background-default});
+    box-shadow: var(#{--card-shadow-default});
     border-radius: $border-radius;
-    background: $lite-background;
   }
   
   .blur {
