--- a/src/pages/Home/components/ThisInfo/ThisDayInfo.module.scss
+++ b/src/pages/Home/components/ThisInfo/ThisDayInfo.module.scss
@@ -7,7 +7,7 @@
     position: relative;
     border-radius: $border-radius;
     box-shadow: $box-shadow;
-    background: $lite-background;
+    background: var(#{--components-background-default});
 
     &__image {
         position: absolute;
@@ -36,7 +36,7 @@
         grid-column: 1 / 2;
         padding: 5px;
         box-shadow: $box-shadow;
-        background: $lite-background;
+        background: $light-background;
         border-radius: 50%;
         margin-right: 15px;
         width: 38px;
@@ -55,12 +55,12 @@
 
     .indicator__name {
         grid-column: 2 / 3;
-        color: $light-color;
+        color: $base-color;
         margin-right: 15px;
     }
 
     .indicator__description {
         grid-column: 3;
-        color: $base-color;
+        color: var(#{--text-color-default});
     }
 }
