--- a/src/shared/Header/Header.module.scss
+++ b/src/shared/Header/Header.module.scss
@@ -1,3 +1,6 @@
+@import '../../styles//variables.scss';
+
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -10,6 +13,7 @@
         align-items: center;
 
         .themeIcon, .logo {
+            cursor: pointer;
             margin-right: 20px;
         }
 
@@ -24,6 +28,7 @@
             text-transform: uppercase;
             font-weight: bold;
             font-size: 25px;
+            color: $primary-color;
         }
     }
 }
