--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@
 body {
   position: relative;
   font-family: 'Montserrat', sans-serif;
-  color: #000000;
+  background: var(#{--body-background-default});
 }
 
 .container {
